@@ -198,7 +198,7 @@ set req(Limits) {
 #
 set req(MaximumAge)     12
 set req(ReleaseNames)   True
-set req(RequestPath)    "E:/ioFTPD/site/REQS"
+set req(RequestPath)    "F:/ioFTPD/site/REQS"
 set req(RequestTag)     {[REQ]-%(request)}
 set req(FilledTag)      {[FILLED]-%(request)}
 
@@ -308,16 +308,16 @@ set force(Exempts)      {*/codec */cover */covers */extra */sample */subs */extr
 #
 # - Path to create the latest pre and race symlinks.
 # - Maximum number of pre and race symlinks (0 to disable).
-# - Style for the latest pre and race tag, cookies: %(release).
-# - Maximum character length of the %(release) cookie (0 for no limit).
+# - Style for the latest pre and race tag, cookies: %(section) and %(release).
+# - Maximum length of the %(release) cookie (0 for no limit).
 # - Directories to ignore to from symlink creation (case insensitive).
 # - Paths to exempt from symlink creation, for race symlinks only (case sensitive).
 #
-set latest(SymPath)     "E:/ioFTPD/site"
+set latest(SymPath)     "F:/ioFTPD/site"
 set latest(PreLinks)    3
 set latest(RaceLinks)   3
 set latest(PreTag)      {[LatestPre]-%(release)}
-set latest(RaceTag)     {[LatestRace]-%(release)}
+set latest(RaceTag)     {[LatestRace]-%(section)-%(release)}
 set latest(MaxLength)   40
 set latest(Ignores)     {*/cd[0-9] */dis[ck][0-9] */dvd[0-9] */codec */cover */covers */extra */extras */sample */subs */vobsub */vobsubs}
 set latest(Exempts) {
